Added a Comment and changed Filename

--- a/doverwatch.css
+++ b/doverwatch.css
@@ -1,5 +1,6 @@
 //META{"name":"Doverwatch","description":"Overwatch-inspired Discord Theme.","author":"iamjawa","version":"1.0"}*//
 
+/* Main Background */
 .app {
   background-image: url(background.png);
   background-size: cover;
