Moved Background Image to imgur

--- a/doverwatch.css
+++ b/doverwatch.css
@@ -2,7 +2,7 @@
 
 /* Main Background */
 .app {
-  background-image: url(background.png);
+  background-image: url("http://i.imgur.com/QeEyO4m.jpg");
   background-size: cover;
 }
 
